--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,14 @@ repositories {
 }
 
 base {
-    archivesName = mod_id
+    archivesName = mod_id + "-" + minecraft_version
+}
+
+jar {
+    exclude("**/*.ini")
+    exclude("**/*.js")
+    exclude("**/*.sh")
+    exclude("**/*.bat")
 }
 
 // Mojang ships Java 21 to end users starting in 1.20.5, so mods should target Java 21.
